fix align

--- a/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
+++ b/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
@@ -68,7 +68,7 @@
   --content-font: 'basier-circle';
 
   height: initial !important;
-  padding-left: 0px !important;
+  padding-left: 5px !important;
   max-width: fit-content !important;
   min-width: fit-content !important;
   text-decoration: none !important;
